crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__structs__struct_field_declaration_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/structs.rs
assertion_line: 119
expression: "goto_definition(r#\"\n%! main.sp\nstruct Plugin\n{\n   public const char[] name;        /**< Plugin Name */\n   public const char[] description; /**< Plugin Description */\n   public const char[] author;      /**< Plugin Author */\n   public const char[] version;     /**< Plugin Version */\n   public const char[] url;         /**< Plugin URL */\n};\n\npublic Plugin myinfo = \n{\n   name = \"name\",\n      |\n      ^\n   author = \"author\",\n   description = \"description\",\n   version = \"version\",\n   url = \"url\"\n};\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 11,
        "character": 3
      },
      "end": {
        "line": 11,
        "character": 7
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 2,
        "character": 3
      },
      "end": {
        "line": 2,
        "character": 28
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 2,
        "character": 23
      },
      "end": {
        "line": 2,
        "character": 27
      }
    }
  }
]
